--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
+== Shop Lab Backend
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a backend written on Ruby on Rails stack for an example Shop Lab app which allows you to create and share shopping lists with your girlfriend/wife/soulmate.
 
-Things you may want to cover:
+## Stack
+========
 
-* Ruby version
+* Ruby on Rails 4.2.3
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- API implemented with `rails-api` gem and `active_model_serializers`
+- Token authentication via `devise_token_auth`
+- PostgresDB
